cmake_minimum_required(VERSION 2.8)
project(ThreadLibTest)
find_package( OpenCV REQUIRED )
find_package( Eigen3 REQUIRED)
set(EIGEN_INCLUDE ${Eigen3_DIR}/../)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPENMP_CXX_FLAG}")
get_filename_component(Thread_Inc "./include" ABSOLUTE)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${EIGEN_INCLUDE})
include_directories(${Thread_Inc})
add_executable(ThreadLibTest main.cpp)
set_target_properties(${OpenCV_LIBS} PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO RELEASE)
target_link_libraries(ThreadLibTest ${OpenCV_LIBS})